0.4.0
Standardized about boxes.
Tweaked some plugin makefiles.
Fixed some plugin translations not working.
Fixed plugin translation files names for gtk3 version.
Fixed some menus not being translated.
Tweaking find/replace code.
Added "Show Icons In Gtk3 Menus" to prefs.
Code clean.
Done popups.
Done menus.
Done Edit menu.
Done File menu.
Tweaked *.am files for plugs.
Fixed occasional error when loading session.
Fixed Session plugin for *bsd*.
Done *bsd* clipboard/firlebrowser plugs.
Done *bsd* term/session plugs.
Started converting plugins for *bsd*.
Fixed bsd sed -i not the same as linux sed -i.
Fixed no file list in tab popup on *bsd*.
Put "Find Definition" back into popup menu.
More tweaks for *bsd*.
Check for exctags in *bsd*.
Don't close tabs if loading missing session file.
Fixed crash on reloading session if session file is missing.
Internal cleaning, readying for porting to BSD.
Issue warning and exit gracefully if no room on /tmp.
Set length of the scrollback buffer to infinite in terminalPlugin.
Added hot key to toggle bookmark menu (^T).
Fixed not resetting page dirty when saving after replace all.
Updated email and web page links, again!
Tweaked makefiles to install global external tools correctly with correct permissions.
Added 'Find Next' to edit menu.
Fixed changed web links.
Fixed Find/Replace dialog blocking on first showing.
Fixed warnings for debian packagers.
Included plugins now respect CXXFLAGS/CPPFLAGS/LDFLAGS passed to configure.
Unstable plugins now have to be specifically enabled with the --enable-unstable-plugins option to ./configure.
Moved MacroPlugin to unstable-plugins.
Fixed not closing all tabs.
Added 'Macro' plugin.
Install instructions for OpenSuse added to INSTALL file.
Fixed symlinking to wrong files.
Fixed some files not being uninstalled properly.
Application icons now symlinked instead of installed.
Corrected installed icon sizes.
Tweaked .desktop files for compatability.
Added requested manpage.